{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 286,
  "lineage": "c516acb1-75e6-c98b-9868-8d0f7ab7cb7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "random-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-018f7e57fce69748b",
            "domain": "vpc",
            "id": "eipalloc-018f7e57fce69748b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-207-176.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.207.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "random-ip"
            },
            "tags_all": {
              "Name": "random-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-nat-gw-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-assign-nat-to-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-attach-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998547497418:vpc/vpc-0dec8e5f4a708d6fd",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-066e852b2008b34db",
            "default_route_table_id": "rtb-09c771e58ba5a7a0d",
            "default_security_group_id": "sg-0a10fe03317c59c65",
            "dhcp_options_id": "dopt-0dc92b64",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dec8e5f4a708d6fd",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0a243b9b3ba21320b",
            "ipv6_cidr_block": "2406:da1a:6ba:ae00::/56",
            "ipv6_cidr_block_network_border_group": "ap-south-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c771e58ba5a7a0d",
            "owner_id": "998547497418",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}